[package]
name = "usdpl-back"
version = "0.11.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NGnius/usdpl-rs"
readme = "../README.md"
description = "Universal Steam Deck Plugin Library back-end"

[features]
default = ["blocking"]
decky = ["usdpl-core/decky"]
blocking = ["tokio", "tokio/rt", "tokio/rt-multi-thread"] # synchronous API for async functionality, using tokio
encrypt = ["usdpl-core/encrypt", "obfstr", "hex"]

[dependencies]
usdpl-core = { version = "0.11", path = "../usdpl-core"}

log = "0.4"

# gRPC/protobuf
nrpc = "0.2"

# HTTP web framework
warp = { version = "0.3" }
bytes = { version = "1.1" }
tokio = { version = "1", optional = true }

# this is why people don't like async
async-trait = "0.1.57"
async-recursion = "1.0.0"

# encryption helpers
obfstr = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }

# translations
gettext-ng = { version = "0.4.1" }

[build-dependencies]
usdpl-build = { version = "0.11", path = "../usdpl-build" }
