[package]
name = "usdpl-core"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NGnius/usdpl-rs"
readme = "README.md"
description = "Universal Steam Deck Plugin Library core"

[features]
default = []
decky = []
crankshaft = []

[dependencies]
base64 = "0.13"
