[package]
name = "usdpl-front"
version = "0.11.0"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NGnius/usdpl-rs"
readme = "../README.md"
description = "Universal Steam Deck Plugin Library front-end designed for WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
decky = ["usdpl-core/decky"]
debug = ["console_error_panic_hook", "console_log"]
encrypt = ["usdpl-core/encrypt", "obfstr", "hex"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.3", features = ["websocket"] }
futures = "0.3"
console_log = { version = "1.0", optional = true, features = ["color"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

web-sys = { version = "0.3", features = [
  #'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]}
js-sys = { version = "0.3" }

async-channel = "1.8"

obfstr = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }

nrpc = { version = "0.10", path = "../../nRPC/nrpc", default-features = false}
usdpl-core = { version = "0.11", path = "../usdpl-core" }
prost = "0.11"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.13" }
