[package]
name = "backend" # TODO replace with plugin name (also in build.sh)
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usdpl-back = { version = "0.5.3", features = ["decky"] }

# logging
log = "0.4"
simplelog = "0.12"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4
